Modernization: Replacing Paths.get with Path.of (#438)