@@ -20,7 +20,7 @@ package org.apache.xml.security.test.javax.xml.crypto.dsig;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
@@ -75,7 +75,7 @@ class XMLSignatureECDSATest extends XMLSignatureAbstract {
     @Override
     KeyStore getKeyStore() throws KeyStoreException, IOException, CertificateException, NoSuchAlgorithmException {
         KeyStore keyStore = KeyStore.getInstance(KEYSTORE_TYPE);
-        keyStore.load(Files.newInputStream(Paths.get(KEYSTORE_PATH)), KEYSTORE_AND_KEY_PASSWORD.toCharArray());
+        keyStore.load(Files.newInputStream(Path.of(KEYSTORE_PATH)), KEYSTORE_AND_KEY_PASSWORD.toCharArray());
         return keyStore;
     }
 
@@ -108,7 +108,7 @@ class XMLSignatureECDSATest extends XMLSignatureAbstract {
 
         byte[] buff = doSignWithJcpApi(signatureAlgorithmURI, alias, false);
         if (LOG.isLoggable(System.Logger.Level.DEBUG)) {
-            Files.write(Paths.get("target", "test-ecdsa-" + jceAlg + ".xml"), buff);
+            Files.write(Path.of("target", "test-ecdsa-" + jceAlg + ".xml"), buff);
         }
         Assertions.assertNotNull(buff);
         assertValidSignatureWithJcpApi(buff, false);
